feat: new error throwing for admin exercise turn off
