# public/swagger.json
@@ -6,6 +6,47 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"IExerciseBody": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"group_id": {
+						"type": "number",
+						"format": "double"
+					},
+					"test": {
+						"properties": {
+							"port": {
+								"type": "number",
+								"format": "double"
+							},
+							"password": {
+								"type": "string"
+							},
+							"username": {
+								"type": "string"
+							},
+							"host": {
+								"type": "string"
+							}
+						},
+						"required": [
+							"port",
+							"username",
+							"host"
+						],
+						"type": "object"
+					}
+				},
+				"required": [
+					"name",
+					"group_id",
+					"test"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IUser": {
 				"properties": {
 					"id": {
@@ -213,7 +254,9 @@
 					"required": true,
 					"content": {
 						"application/json": {
-							"schema": {}
+							"schema": {
+								"$ref": "#/components/schemas/IExerciseBody"
+							}
 						}
 					}
 				}
