# src/types/IExerciseBody.ts
@@ -1,0 +1,10 @@
+export interface IExerciseBody {
+    name: string,
+    group_id: number;
+    test: {
+        host: string,
+        username: string,
+        password: string | undefined,
+        port: number
+    }
+}
